--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Lint and Deploy to AWS Lambda
+name: Lint, Build, and Deploy to AWS Lambda
 
 on:
   push:
@@ -8,8 +8,12 @@ on:
     branches:
       - master
 
+# Define environment variables that will be used across the jobs
 env:
   TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+  AWS_REGION: 'eu-north-1'
+  ECR_REPOSITORY: 'mushrooms-map'
+  LAMBDA_FUNCTION_NAME: 'mushroomsMap'
 
 jobs:
   lint:
@@ -23,57 +27,51 @@ jobs:
       with:
         python-version: '3.12'
 
-    - name: Install dependencies
+    - name: Install dependencies for linting
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install black
 
     - name: Run black code formatter check
       run: black --check .
 
   deploy:
-    # This job will only run if the 'lint' job is successful
+    # This job depends on the successful completion of the 'lint' job
     needs: lint
     # Only run on pushes to the master branch, not on pull requests
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        # Install only runtime dependencies for the package
-        pip install -r requirements.txt --ignore-requires-python
-        mkdir -p package
-        cp -r src/* package/
-        # Manually copy installed packages, excluding linters
-        pip install --target=./package -r requirements.txt --ignore-requires-python --no-deps easyocr torch torchvision Pillow requests python-dotenv numpy
-
-    - name: Create deployment zip
-      run: |
-        cd package
-        zip -r ../deploy.zip .
+      uses: actions/checkout@v4
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: 'eu-north-1' # Change to your Lambda's region
+        aws-region: ${{ env.AWS_REGION }}
 
-    - name: Upload ZIP to S3
-      run: aws s3 cp deploy.zip s3://mushrooms-map/deploy.zip
+    - name: Log in to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Update Lambda from S3
+    - name: Build, tag, and push image to Amazon ECR
+      id: build-image
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        IMAGE_TAG: ${{ github.sha }} # Use the commit hash as a unique image tag
       run: |
-          aws lambda update-function-code \
-            --function-name mushroomsMap \
-            --s3-bucket mushrooms-map \
-            --s3-key deploy.zip
+        # Build the docker image and tag it
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        # Push the image to ECR
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        # Set the image URI as an output for the next step
+        echo "image_uri=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+    - name: Update Lambda function with new image
+      run: |
+        aws lambda update-function-code \
+          --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
+          --image-uri ${{ steps.build-image.outputs.image_uri }}
